# ai-multimodal-storyteller

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/ai_multimodal_storyteller/: app.py  audio_gen.py  db.py  image_gen.py  pipeline.py  text_gen.py
tests/: device_test.py
